# paz-app

./: .gitignore
src/: Cargo.toml  README.md
src/core/: Cargo.toml  index.ts  package-lock.json  package.json  tsconfig.json
src/core/bindings/: ClientCommand.ts  ClientQuery.ts  ClientState.ts  CoreEvent.ts  CoreResponse.ts  ReminderState.ts  View.ts
src/core/scripts/: bindingIndex.ts
src/core/src/: cache.rs  lib.rs  state.rs
src/paz/: package-lock.json  package.json  rollup.config.js  tailwind.config.js  tsconfig.json
src/paz/public/: index.html
src/paz/src/: App.svelte  main.ts  store.ts  transport.ts
src/paz/src-tauri/: Cargo.toml  tauri.conf.json
src/paz/src-tauri/src/: main.rs
src/paz/src/components/: Dashboard.svelte  MainOld.svelte  Navigation.svelte  Old.svelte  Reminder.svelte  Settings.svelte  TopNav.svelte
