[package]
name = "pazcore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ts-rs = "6.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
uuid = { version = "1.0.0", features = ["v4"] }
tokio = { version = "1.18.2", features = ["sync", "rt"] }